src/test/deca/syntax/valid/without_class/list_var_declaration_assignation.deca
// Description :
//    testing syntax of list variable declaration
//
// Resultats :
//    ok
//
// Historique:
//    cree le 12/01/2023
{
    int a = 1, b = 1, c = 1;
}