src/test/deca/syntax/invalid/lexer/operator_does_not_exist.deca
/// Description:
//    Syntax error operator does not exist  
//
// Resultats:
// 	  Syntax Error
//    line 10
// Historique:
// 	  cree le 14/01/2023
{
    int x = a | b;
}